fixing layout issues

--- a/src/shell/assets/css/less/shell.less
+++ b/src/shell/assets/css/less/shell.less
@@ -222,6 +222,7 @@ body {
 .view-container{
   //min-height: 100%;
   padding-bottom: 50px;
+  margin-top:50px;
 }
 
 #footer .navbar{
