--- a/src/shell/assets/css/less/subjects.add.less
+++ b/src/shell/assets/css/less/subjects.add.less
@@ -104,10 +104,10 @@ textarea.subject{
     border-bottom: 3px solid #929497;
 }
 
-.page-content-wrapper{
-    margin-top:50px;
+/*.page-content-wrapper{
+    //margin-top:50px;
     padding-right: 0px;
-}
+}*/
 
 .ul_list{
     list-style-position: outside;
